# Apuntes_Rust

./: README.md
02- Conexion_cookie/: Cargo.toml  README.md
Conexion_cookie-02/: README.md
Conexion_usuario_password-01/: Cargo.toml
Structs-03/: README.md
Structs-03/src/: main.rs  main_ejercicio.rs  main_solucion.rs
lec_01_conexion_usuario_password/: README.md
lec_02_conexion_cookie/: README.md
lec_02_conexion_cookie/src/: main_ejercicio.rs
lec_03_structs/: Cargo.toml  README.md
lec_04_rocket/: Cargo.toml  README.md
lec_04_rocket/src/: main.rs
lec_05_struc_rocket_txs_mempool/: Cargo.toml  README.md
lec_05_struc_rocket_txs_mempool/src/: main.rs
leccion_01/: README.md
leccion_01/src/: main_ejercicio.rs  main_solucion.rs
