[package]
name = "leccion_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.18.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
base64 = "0.13.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }

